#5 changing messages from messages.properties. not a big change for the current issue

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -1,2 +1,2 @@
-email.confirmation.title = ClockinClockout - Email Confirmation
-email.resetpassword.title = ClockinClockout - Reset Password
+email.confirmation.title = [clkio] Email Confirmation
+email.resetpassword.title = [clkio] Reset Password
